--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ html, body {
 
 .wrapper {
     height: 100%;
+    background: #E8E8E8;
     display: flex;
     -webkit-align-items: center;
     -webkit-justify-content: center;
